// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Image /> renders a Radius prop correctly 1`] = `
<picture
  className="image"
>
  <img
    alt="blank figure"
    className="br3 shadow-null w-100"
    src="http://via.placeholder.com/1600x900/CDECFF"
  />
</picture>
`;

exports[`<Image /> renders a Shadow prop 1`] = `
<picture
  className="image"
>
  <img
    alt="blank figure"
    className="br0 shadow-1 w-100"
    src="http://via.placeholder.com/1600x900/CDECFF"
  />
</picture>
`;

exports[`<Image /> renders alt text when passed 1`] = `
<picture
  className="image"
>
  <img
    alt="horseback rider"
    className="br0 shadow-null w-100"
    src="http://via.placeholder.com/1600x900/CDECFF"
  />
</picture>
`;

exports[`<Image /> renders an object of images correctly 1`] = `
<picture
  className="image"
>
  <source
    key="http://via.placeholder.com/2400x1350/CDECFF"
    media="(min-width: 60em)"
    srcSet="
            http://via.placeholder.com/2400x1350/CDECFF,http://via.placeholder.com/1600x900/CDECFF 1x,
            http://via.placeholder.com/2400x1350/CDECFF,http://via.placeholder.com/1600x900/CDECFF 2x"
  />
  <source
    key="http://via.placeholder.com/1600x900/CDECFF"
    media="(min-width: 30em) and (max-width: 60em)"
    srcSet="
            http://via.placeholder.com/1600x900/CDECFF,http://via.placeholder.com/1600x900/CDECFF 1x,
            http://via.placeholder.com/1600x900/CDECFF,http://via.placeholder.com/1600x900/CDECFF 2x"
  />
  <source
    key="http://via.placeholder.com/800x450/CDECFF"
    media="(max-width: 30em)"
    srcSet="
          http://via.placeholder.com/800x450/CDECFF,http://via.placeholder.com/800x450/CDECFF 1x,
          http://via.placeholder.com/800x450/CDECFF,http://via.placeholder.com/800x450/CDECFF 2x"
  />
  <img
    alt="blank figure"
    className="br0 shadow-null w-100"
    src="http://via.placeholder.com/1600x900/CDECFF"
  />
</picture>
`;

exports[`<Image /> renders defaults correctly 1`] = `
<picture
  className="image"
>
  <img
    alt="blank figure"
    className="br0 shadow-null w-100"
    src="http://via.placeholder.com/1600x900/CDECFF"
  />
</picture>
`;

exports[`<Image /> renders if the object is malformed 1`] = `
<picture
  className="image"
>
  <source
    key="http://via.placeholder.com/1600x900/CDECFF"
    media="(min-width: 60em)"
    srcSet="
            null 1x,
            null 2x"
  />
  <source
    key="http://via.placeholder.com/1600x900/CDECFF"
    media="(min-width: 30em) and (max-width: 60em)"
    srcSet="
            null 1x,
            null 2x"
  />
  <source
    key="http://via.placeholder.com/1600x900/CDECFF"
    media="(max-width: 30em)"
    srcSet="
          null 1x,
          null 2x"
  />
  <img
    alt="blank figure"
    className="br0 shadow-null w-100"
    src="http://via.placeholder.com/1600x900/CDECFF"
  />
</picture>
`;
